...
            <objects>
                <viewController id="xPE-3g-D2P" customClass="ViewController" customModule="Fruit_MVVM" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="zvq-Yd-IUS">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PHz-ec-7kd">
                                <rect key="frame" x="16" y="303" width="361" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="WDD-dg-Cfq"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="go"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pt1-Xg-wus">
                                <rect key="frame" x="16" y="345" width="361" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="kf4-5t-gXL"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="go"/>
...
                                <rect key="frame" x="16" y="412" width="361" height="35"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="ztq-47-jUL"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign in"/>
                                <connections>
                                    <action selector="signInButtonClicked:" destination="xPE-3g-D2P" eventType="touchUpInside" id="4R4-be-GZp"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fruit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="thB-pp-ESe">
                                <rect key="frame" x="16" y="124.99999999999999" width="77" height="24.333333333333329"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="77" id="ZVd-NR-VmQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cPt-vV-EOg">
                                <rect key="frame" x="310" y="119.99999999999999" width="83" height="34.333333333333329"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="83" id="U8f-MB-5UL"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="details">
                                    <color key="baseForegroundColor" systemColor="linkColor"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="fruitDetailsButton:" destination="xPE-3g-D2P" eventType="touchUpInside" id="XC8-cq-lpG"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bef-ci-z2T">
                                <rect key="frame" x="112" y="649" width="170" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Second storyboard">
                                    <color key="baseBackgroundColor" systemColor="labelColor"/>
                                </buttonConfiguration>
                                <connections>
                                    <segue destination="iU9-sU-L5x" kind="show" id="ZFQ-u2-d6I"/>
                                </connections>
                            </button>
...
