<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Home-->
        <scene sceneID="s0d-6b-0kx">
            <objects>
                <viewController storyboardIdentifier="SSBViewController" id="Y6W-OH-hqX" customClass="SSBViewController" customModule="Fruit_MVVM" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" systemColor="systemYellowColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="4AU-gj-4IO">
                        <color key="badgeColor" systemColor="systemYellowColor"/>
                    </tabBarItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1048" y="4"/>
        </scene>
        <!--Settings-->
        <scene sceneID="fJX-gf-dpe">
            <objects>
                <viewController id="9gn-A5-F3r" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="cQT-Iz-IZF">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="YQo-6o-gUA"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="xmark.seal.fill" catalog="system" id="l7s-Xa-my1"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="deD-gQ-xms" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1815" y="4"/>
        </scene>
        <!--Gallery-->
        <scene sceneID="LT9-EB-gYc">
            <objects>
                <viewController id="SlN-hB-dev" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="MsG-gg-JId">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="Mc8-kA-fvI"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" systemColor="systemYellowColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Gallery" image="photo.circle.fill" catalog="system" id="684-0j-mF0"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7gy-ri-iXt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2609" y="15"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="pAZ-My-1dc">
            <objects>
                <tabBarController storyboardIdentifier="SBViewController" automaticallyAdjustsScrollViewInsets="NO" id="PAH-wW-Qgo" customClass="SBViewController" customModule="Fruit_MVVM" customModuleProvider="target" sceneMemberID="viewController">
                    <toolbarItems/>
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7Cp-VG-xqm">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="barTintColor" systemColor="systemYellowColor"/>
                    </tabBar>
                    <connections>
                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="viewControllers" id="9AO-2r-fmz"/>
                        <segue destination="9gn-A5-F3r" kind="relationship" relationship="viewControllers" id="rs0-YU-8P0"/>
                        <segue destination="SlN-hB-dev" kind="relationship" relationship="viewControllers" id="cSq-nJ-Om3"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="e2T-gA-cgK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="139.69465648854961" y="3.5211267605633805"/>
        </scene>
    </scenes>
    <resources>
        <image name="homekit" catalog="system" width="128" height="104"/>
        <image name="photo.circle.fill" catalog="system" width="128" height="123"/>
        <image name="xmark.seal.fill" catalog="system" width="128" height="124"/>
        <systemColor name="systemYellowColor">
            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
